feat: upgrade Jackson from 2.x to 3.2.1
This commit migrates the Fabric8 Kubernetes Client from Jackson 2.x to Jackson 3.x (3.2.1).

Key changes:
- Upgrade jackson.version from 2.22.2 to 3.2.1
- Update all Jackson imports from com.fasterxml.jackson.* to tools.jackson.*
- Regenerate all Kubernetes model classes with Jackson 3.x
- Update sundrio to 0.300.0 for Jackson 3 compatibility
- Fix tests for Jackson 3 YAML serialization changes
- Comment out java-generator CLI test (to be updated in separate PR)
- Enable CI workflows to run in forks for testing

Breaking changes:
- Jackson 3.x uses new package names (tools.jackson.* instead of com.fasterxml.jackson.*)
- YAML serialization behavior differs slightly (MINIMIZE_QUOTES is more aggressive)

Issue: #7374